# MinerUExperiment

./: .envrc  .gitignore  ARCHITECTURE.txt  Guidance.md  IMPLEMENTATION_PLAN.md  QUICKSTART.md  README.md  README_PROPOSALS.md  USER_GUIDE.md  pyproject.toml
openspec/: project.md
openspec/changes/add-batch-failure-reporting/: proposal.md  tasks.md
openspec/changes/add-batch-preflight-checks/: proposal.md  tasks.md
openspec/changes/add-batch-processing-system/: proposal.md  tasks.md
openspec/changes/add-enhanced-markdown-generation/: proposal.md  tasks.md
openspec/changes/add-gpu-aware-throttling/: proposal.md  tasks.md
openspec/changes/add-mineru-vllm-integration/: proposal.md  tasks.md
openspec/changes/add-performance-optimization/: proposal.md  tasks.md
openspec/changes/optimize-gpu-metrics-sampling/: proposal.md  tasks.md
openspec/changes/optimize-worker-discovery/: proposal.md  tasks.md
scripts/: compare_performance_reports.py  postprocess_markdown.py  process_batch.py  setup_mineru_env.sh  validate_mineru_setup.py
src/MinerUExperiment/: __init__.py  batch_processor.py  gpu_utils.py  markdown_builder.py  metrics.py  mineru_config.py  mineru_runner.py  performance_config.py  progress.py  validation.py  worker_coordinator.py
src/MinerUExperiment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_basic.py  test_batch_processor_configuration.py  test_batch_processor_integration.py  test_gpu_utils.py  test_markdown_builder.py  test_process_batch.py  test_resource_monitor.py  test_validation.py
(+15 files in other folders)
