[project]
name = "MinerUExperiment"
version = "0.1.0"
description = "MinerUExperiment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mineru[all]>=2.5.0",
    "torch>=2.3.0",
    "huggingface_hub>=0.22.2",
    "psutil>=5.9.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
strict = true
